--- a/svelte-app/src/app.css
+++ b/svelte-app/src/app.css
@@ -1,5 +1,6 @@
 body {
     padding: 0px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
 }
 
 .card_list {
@@ -32,9 +33,13 @@ body {
 .MypageBody {
     margin: 0;
     padding: 0;
-
+    background-color: #edf2f4;
+    height: 100vh;
 }
 
+.home-body {
+    background-color: #edf2f4;
+}
 .margin {
     margin-bottom: 5px;
 }
@@ -190,7 +195,7 @@ table {
     gap: 10px;
 }
 
-.card {
+.home-card {
     height: 250px;
     background-color: #133757;
 }
@@ -205,4 +210,28 @@ table {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.profile_name {
+    padding: 10px;
+    font-size: 30px;
+}
+
+.profile_background {
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.profile_sub_title {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.profile_sub_body {
+    margin-top: 20px;
+}
+
+.profile_sub_inner {
+    margin-bottom: 10px;
 }
