--- a/svelte-app/src/app.css
+++ b/svelte-app/src/app.css
@@ -237,10 +237,11 @@ table {
 }
 
 .profile_meeting_inner {
-    border: 1px solid #dcdee5;
-    height: 100px;
+    /* border: 1px solid #dcdee5; */
     border-radius: 10px;
     margin-top: 20px;
+    padding: 5px;
+    background-color: #edf2f4;
 }
 
 
